examples/loadbalancer_multiport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiport
spec:
  selector:
    matchLabels:
      app: multiport
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: multiport
    spec:
      terminationGracePeriodSeconds: 30
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - multiport
            topologyKey: kubernetes.io/hostname
      containers:
      - name: multiport
        image: registry.k8s.io/e2e-test-images/agnhost:2.66.1
        args:
          - porter
        ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: multiport
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: multiport
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
