examples/loadbalancer_stts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: apache
spec:
  selector:
    matchLabels:
      app: apache
  serviceName: apache
  replicas: 2
  template:
    metadata:
      labels:
        app: apache
    spec:
      terminationGracePeriodSeconds: 30
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - nginx
            topologyKey: kubernetes.io/hostname
      containers:
      - name: apache
        image: registry.k8s.io/e2e-test-images/agnhost:2.66.1
        args:
          - netexec
          - --http-port=80
          - --delay-shutdown=30
        ports:
          - name: httpd
            containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: apache
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: apache
  ports:
    - name: httpd
      port: 80
      targetPort: 80
