examples/gateway_http_multi_listener.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: multi-listener-gateway
spec:
  gatewayClassName: cloud-provider-kind
  listeners:
  - protocol: HTTP
    port: 80
    hostname: "*.multi-listener.test"
    name: wildcard
    allowedRoutes:
      namespaces:
        from: All
  - protocol: HTTP
    port: 80
    hostname: multi-listener.test
    name: root
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: multi-listener-route
spec:
  parentRefs:
  - name: multi-listener-gateway
  hostnames:
    - route.multi-listener.test
  rules:
  - backendRefs:
    - name: multi-listener-app-svc
      port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-listener-app
spec:
  selector:
    matchLabels:
      app: MultiListenerApp
  replicas: 1
  template:
    metadata:
      labels:
        app: MultiListenerApp
    spec:
      containers:
      - name: multi-listener-app
        image: registry.k8s.io/e2e-test-images/agnhost:2.66.1
        args:
          - netexec
          - --http-port=80
          - --delay-shutdown=30
        ports:
          - name: httpd
            containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: multi-listener-app-svc
spec:
  type: ClusterIP
  selector:
    app: MultiListenerApp
  ports:
    - name: httpd
      port: 8080
      targetPort: 80
